...
import kotlinx.coroutines.delay
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.flow
import kotlinx.coroutines.flow.flowOn

internal object TimerTags {
    const val BAR: String = "timer-bar"
    const val CLOCK: String = "timer-clock"
    const val FULL_SCREEN: String = "timer-full-screen"
    const val FULL_SCREEN_CLOCK: String = "timer-full-screen-clock"
    const val QUESTION: String = "timer-question"
}

...
